860t5d37a [P3] Make everything on site smaller (blog)

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -146,9 +146,9 @@
 		}
 	}
 
-	.blog-post__cards figure {
-		margin-bottom: 1.25rem;
-	}
+	// .blog-post__cards figure {
+	// 	margin-bottom: 1.25rem;
+	// }
 
 	.blog-post__cards .blog-post__card:hover {
 		text-decoration: underline !important;
