860t5d37a update reviews page

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -115,7 +115,7 @@
             @apply flex flex-col;
         }
         .review__filter-form-inputs {
-            @apply mx-0 lg:-mx-g;
+            @apply mx-0;
 
             .custom-select {
                 @apply border-0;
@@ -140,7 +140,7 @@
             @apply w-full lg:w-3/12;
 
             .input-group {
-                @apply w-full lg:pr-3;
+                @apply w-full;
             }
         }
 
@@ -150,7 +150,7 @@
 
         .product__review-list-container,
         .review__question-right {
-            @apply w-full lg:w-9/12
+            @apply w-full lg:w-9/12 lg:pl-g;
         }
 
         .product__review-list-container > hr,
