860t5d37a update article shop overlay

--- a/src/styles/templates/_article.scss
+++ b/src/styles/templates/_article.scss
@@ -46,6 +46,14 @@
 		.product-card-btn__prices {
 			@apply lg:py-hg lg:text-sm;
 		}
+
+		.swatch-overlay {
+			@apply lg:left-hg lg:right-hg;
+
+			.button-overlay {
+				@apply lg:-mb-[27.5px];
+			}
+		}
 	}
 
 	// p img {
