--- a/src/styles/templates/_article.scss
+++ b/src/styles/templates/_article.scss
@@ -42,6 +42,10 @@
 			}
 		}
 
+		.badge {
+			@apply rounded-[8px] lg:top-[9px] lg:left-[22.5px];
+		}
+
 		.product-card-btn__text,
 		.product-card-btn__prices {
 			@apply lg:py-hg lg:text-sm;
