--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -34,6 +34,10 @@
     .footer {
         .dropdown__store button {
             @apply text-sm font-normal;
+
+            &:after {
+                @apply border-b-[5px] border-l-[5px] border-r-[5px] ml-1 lg:mt-0;
+            }
         }
 
         &__newsletter-form input {
@@ -431,7 +435,7 @@
         }
 
         &__button {
-            @apply inline-block lg:hidden mt-g;
+            @apply inline-block lg:hidden mt-g px-[4em];
         }
 
         &__title {
