--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -202,7 +202,7 @@
     .list-logo {
         @apply pt-2 lg:pt-0;
 
-        figure { @apply font-bold; }
+        // figure { @apply font-bold; }
     }
 
     // social instagram
