update article template

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -101,7 +101,7 @@
 			.ratio-1x1::before {
 				display: block;
 				content: "";
-				padding-top: 13.9375em;
+				padding-top: 54.1666666667%;
 
 				@screen lg {
 					padding-top: 25em;
