--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -18,7 +18,7 @@
         }
 
         &-nav li button {
-            @apply bg-gray-400 rounded-full mr-1 w-auto text-base min-h-3 max-h-3 lg:max-h-[45px] flex items-center lg:text-lg px-2 text-gray-600;
+            @apply bg-gray-400 rounded-full mr-1 w-auto text-base min-h-3 lg:min-h-4 max-h-3 lg:max-h-[45px] flex items-center px-2 text-gray-600;
         }
 
         &-nav li:last-child button {
@@ -294,7 +294,7 @@
     .product-swatch__test {
         
         .variant-swatch {
-            @apply border-t border-b w-auto h-auto rounded-full me-25 py-[6px] flex-1 basis-auto lg:min-h-[40px] lg:flex lg:grow-0 lg:items-center lg:justify-end pr-g pl-1 bg-none;
+            @apply border-t border-b w-auto h-auto rounded-full me-25 py-[6px] flex-1 basis-auto lg:min-h-4 lg:flex lg:grow-0 lg:items-center lg:justify-end pr-g pl-1 bg-none;
 
             &:after {
                 @apply w-[24px] left-[12.5px] lg:w-3;
@@ -428,14 +428,18 @@
 
     // homepage video reels
     .instagram-reels {
-        @apply lg:mt-5;
+        @apply px-0 lg:px-g lg:mt-5;
+
+        &__video-container {
+            @apply pl-hg lg:pl-0;
+        }
 
         video {
-            @apply rounded-[24px] h-[225.5px] min-h-[225.5px] lg:rounded-[32px] lg:h-[355px] lg:min-h-[355px] object-cover w-full;
+            @apply rounded-[24px] h-[226px] min-h-[226px] lg:rounded-[32px] lg:h-[355px] lg:min-h-[355px] object-cover w-full;
         }
 
         &__card {
-            @apply w-[47.5%] basis-[47.5%] lg:w-1/4 lg:basis-1/4;
+            @apply w-[175px] basis-[175px] lg:w-1/4 lg:basis-1/4;
 
             p {
                 @apply text-sm lg:text-base;
@@ -501,7 +505,7 @@
         @apply hidden;
     }
 	.collection-template__products {
-        @apply px-hg;
+        @apply px-hg lg:px-0;
 
         .custom-select {
             @apply bg-gray-400 border-gray-400 pl-g lg:w-[154px];
@@ -509,7 +513,7 @@
             background-size: 12px 8px;
         }
         .product-title__text {
-            @apply min-h-[54px] my-0 lg:min-h-[50px];
+            @apply min-h-[54px] my-0 lg:min-h-4;
         }
 
         .product-card {
