reduce product card review text

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -375,7 +375,8 @@
                 @apply hidden;
             }
 
-            .review-star__total a {
+            .review-star__total a,
+            .yotpo-start__number {
                 @apply text-xs;
             }
         }
