860t5d37a collection quiz card update

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -544,11 +544,14 @@
 
     // collection template
     .terms--link {
-        @apply container mt-1 pb-25;
+        @apply container mt-1 pb-25 lg:pb-0;
 
         a {
             @apply lg:px-0 lg:py-2 text-base;
         }
+    }
+    .collection__container {
+        @apply lg:mt-[50px] lg:mb-[20px];
     }
     @screen lg {
         .collection__sidebar {
@@ -566,7 +569,7 @@
         }
 
         .collection-sidebar-label {
-            @apply text-lg mt-4;
+            @apply text-lg mt-3;
         }
     }
     .collection-template__services {
