--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -207,9 +207,9 @@ afterpay-placement {
 			position: absolute;
 		}
 
-		.rounded-full {
-			padding: 14px 14px;
-		}
+		// .rounded-full {
+		// 	padding: 14px 14px;
+		// }
 
 		svg {
 			height: 12px;
