--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -403,6 +403,9 @@
         &-wrapper .img-slider svg {
             @apply h-[.5rem] lg:h-[12px];
         }
+        &--compareimg img {
+            @apply -mt-[3.4375em];
+        }
         &-arrow {
             @apply p-[.5rem] lg:p-[14px];
 
@@ -418,6 +421,9 @@
     .product__banner {
         @apply mb-4;
 
+        &-content div:last-child {
+            @apply mb-0
+        }
         &-left {
             @apply order-2 lg:order-1 sm:pt-[1rem] sm:pb-2 text-body px-2;
         }
