--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -284,8 +284,18 @@
         @apply hidden;
     }
 
+    .product__accordion {
+        .accordion-item svg {
+            @apply h-[.75em] w-[.75em];
+        }
+    }
+
     .payment-banner--item {
         @apply mb-g;
+
+        svg {
+            @apply h-2;
+        }
     }
 
     .payment-banner__text {
@@ -419,7 +429,7 @@
     }
     
     .product__banner {
-        @apply mb-4;
+        @apply mb-4 lg:mb-5;
 
         &-content div:last-child {
             @apply mb-0
