860t5d37a increase tos link size collection

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -590,7 +590,7 @@
         @apply container mt-1 pb-25 lg:pb-0;
 
         a {
-            @apply lg:px-0 lg:py-2 text-[.625em];
+            @apply lg:px-0 lg:py-2 text-sm;
         }
     }
     .collection__container {
