--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -629,7 +629,7 @@
         @apply px-hg lg:px-0;
 
         .custom-select {
-            @apply bg-gray-400 border-gray-400 pl-g lg:w-[154px];
+            @apply bg-gray-400 border-gray-400 pl-g lg:min-w-[154px];
             background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2212%22%20height%3D%228%22%20viewBox%3D%220%200%2012%208%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1.41%200.589844L6%205.16984L10.59%200.589844L12%201.99984L6%207.99984L0%201.99984L1.41%200.589844Z%22%20fill%3D%22%23151515%22%2F%3E%3C%2Fsvg%3E");
             background-size: 12px 8px;
         }
