--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -464,7 +464,7 @@
     .product-card {
 
         img {
-            @apply lg:!max-h-[calc(100%-1rem)];
+            // @apply lg:!max-h-[calc(100%-1rem)] lg:!w-full lg:!h-full lg:!max-w-full lg:!max-h-full lg:!left-0 lg:!right-0;
         }
 
         .product-title__text {
