860t5d37a update button size for video section & add %save on PDP cta variant

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -577,7 +577,7 @@
                 @apply hidden;
             }
             button {
-                @apply bg-gray-400 mr-1 whitespace-nowrap rounded-full py-25 lg:py-1 px-2;
+                @apply bg-gray-400 mr-1 whitespace-nowrap rounded-full py-25 lg:py-1 px-2 lg:text-base;
 
                 &.instagram-reels__nav--active {
                     @apply font-normal bg-primary text-white;
