add saving tags PDP

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -340,8 +340,11 @@
         }
     }
 
-    .tag-boxes__empty {
-        @apply mb-0;
+    .tag-boxes {
+        @apply text-sm lg:text-base;
+        &__empty {
+            @apply mb-0;
+        }
     }
 
     .product-form {
