--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,3 +67,7 @@
 // @import 'templates/our-story';
 // @import 'templates/product';
 @import 'templates/p3-site-smaller';
+
+#gorgias-chat-container #chat-button {
+    z-index: 999 !important;
+}
