roll out variant P3

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -119,6 +119,14 @@
 			margin-bottom: 0 !important;
 		}
 	}
+
+	.hide-scrollbar {
+		-ms-overflow-style: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+            @apply hidden;
+        }
+	}
 }
 
 @keyframes gradient-shimmer {
