--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,7 +32,7 @@
 // @import 'compounds/product-waitlist';
 // @import 'compounds/product-banner';
 @import 'compounds/product-variant';
-// @import 'compounds/product-card';
+@import 'compounds/product-card';
 // @import 'compounds/shop-article';
 // @import 'compounds/product-card-abtest';
 // @import 'compounds/product-card-cta-abtest';
@@ -50,6 +50,7 @@
 // @import 'compounds/pdp-upsell';
 @import 'compounds/nav-mega-menu';
 
+@import 'sections/product-carousel';
 @import 'sections/range-banner';
 @import 'sections/howto';
 // @import 'sections/playground';
