--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,10 +64,11 @@
 @import 'templates/stockist';
 @import 'templates/loyalty';
 // @import 'templates/sustainability';
+@import 'templates/pdp';
 @import 'templates/sweepstakes';
 // @import 'templates/our-story';
 // @import 'templates/product';
-@import 'templates/p3-site-smaller';
+// @import 'templates/p3-site-smaller';
 
 #gorgias-chat-container #chat-button {
     z-index: 999 !important;
