860t5d37a fix mobile swatch selector

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -140,12 +140,14 @@
 		}
 	}
 
-	.hide-scrollbar {
-		-ms-overflow-style: none;
-        scrollbar-width: none;
-        &::-webkit-scrollbar {
-            @apply hidden;
-        }
+	@media (max-width: 768px) {
+		.hide-scrollbar {
+			-ms-overflow-style: none;
+			scrollbar-width: none;
+			&::-webkit-scrollbar {
+				@apply hidden;
+			}
+		}
 	}
 }
 
