--- a/src/styles/templates/_pdp.scss
+++ b/src/styles/templates/_pdp.scss
@@ -83,7 +83,7 @@
     }
 }
 
-.product-swatch {
+.product-form .product-swatch {
     
     .variant-swatch {
         @apply border-t border-b w-auto h-auto rounded-full me-25 py-[6px] flex-1 basis-auto lg:min-h-4 lg:flex lg:grow-0 lg:items-center lg:justify-end pr-g pl-1 bg-none;
