860t5d37a update 2nd variant options

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -149,6 +149,13 @@
 			}
 		}
 	}
+
+	@screen lg {
+		.hide-scrollbar {
+			-ms-overflow-style: thin;
+			scrollbar-width: thin;
+		}
+	}
 }
 
 @keyframes gradient-shimmer {
