--- a/src/styles/templates/_pdp.scss
+++ b/src/styles/templates/_pdp.scss
@@ -126,13 +126,13 @@
 
 .product-banner__slider {
     &-wrapper picture {
-        @apply pt-[16.5em] lg:pt-[31.625em];
+        @apply pt-[20.0em] lg:pt-[31.625em];
     }
     &-wrapper .img-slider svg {
         @apply h-[.5rem] lg:h-[12px];
     }
     &--compareimg img {
-        @apply -mt-[3.4375em];
+        @apply lg:-mt-[3.4375em];
     }
     &-arrow {
         @apply p-[.5rem] lg:p-[14px];
