--- a/src/styles/templates/_pdp.scss
+++ b/src/styles/templates/_pdp.scss
@@ -125,15 +125,15 @@
 }
 
 .product-banner__slider {
-    &-wrapper picture {
-        @apply lg:pt-[31.625em];
-    }
+    // &-wrapper picture {
+    //     @apply lg:pt-[31.625em];
+    // }
     &-wrapper .img-slider svg {
         @apply h-[.5rem] lg:h-[12px];
     }
-    &--compareimg img {
-        @apply lg:-mt-[3.4375em];
-    }
+    // &--compareimg img {
+    //     @apply lg:-mt-[3.4375em];
+    // }
     &-arrow {
         @apply p-[.5rem] lg:p-[14px];
 
