1. Blog: Optimise newsletter signup banner 2. The height of the product card should be fixed before|after loading

--- a/src/styles/compounds/_product-card.scss
+++ b/src/styles/compounds/_product-card.scss
@@ -1,7 +1,7 @@
 .product-card {
 
 	.product-title__text {
-		@apply mx-0 lg:mb-25 mb-25 lg:mt-0 min-h-[54px] lg:min-h-[auto];
+		@apply mx-0 lg:mb-25 mb-25 lg:mt-0 min-h-[40px];
 	}
 
 	.review-stars__number {
