--- a/src/styles/templates/_pdp.scss
+++ b/src/styles/templates/_pdp.scss
@@ -181,8 +181,8 @@
         .badge {
             @apply py-[.375em];
         }
-        p.h2 {
-            @apply text-lg mb-[1rem];
+        p {
+            @apply text-lg mb-[1rem] min-h-[4.688rem] lg:min-h-[auto];
         }
     }
 
