Create Sale Pop Up (similar to Newsletter Pop Up)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,7 @@
 // @import 'compounds/birthday-popup';
 // @import 'compounds/exit-intent';
 @import 'compounds/newsletter-popup';
+@import 'compounds/sales-popup';
 // @import 'compounds/sweepstakes-popup';
 // @import 'compounds/cookies-popup';
 // @import 'compounds/pdp-upsell';
