new sample page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,6 +67,7 @@
 // @import 'templates/sustainability';
 @import 'templates/pdp';
 @import 'templates/sweepstakes';
+@import 'templates/page';
 // @import 'templates/our-story';
 // @import 'templates/product';
 // @import 'templates/p3-site-smaller';
