86etm59zw feedback fixes

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -156,6 +156,20 @@
 			scrollbar-width: thin;
 		}
 	}
+
+	.small-scrollbar {
+		&::-webkit-scrollbar-track {
+			box-shadow: inset 0 0 5px grey;
+			border-radius: 10px;
+		}
+		&::-webkit-scrollbar-thumb {
+			background: red; 
+			border-radius: 10px;
+		}
+		&::-webkit-scrollbar-thumb:hover {
+			background: #b30000; 
+		}
+	}
 }
 
 @keyframes gradient-shimmer {
