CE Accessibility - September 2025

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,6 +52,7 @@
 @import 'compounds/nav-mega-menu';
 
 @import 'sections/product-carousel';
+@import 'sections/reels-carousel';
 @import 'sections/range-banner';
 @import 'sections/howto';
 // @import 'sections/playground';
