--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -268,6 +268,13 @@ afterpay-placement {
 	}
 }
 
+.no-select,
+.no-select * {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none;
+}
+
 // @charset 'UTF-8';
 
 @import 'core/functions';
