The top and bottom padding should be equal

--- a/src/styles/templates/_pdp.scss
+++ b/src/styles/templates/_pdp.scss
@@ -158,7 +158,7 @@
         @apply mb-0
     }
     &-left {
-        @apply order-2 lg:order-1 sm:pt-[1rem] sm:pb-2 text-body px-2;
+        @apply order-2 lg:order-1 sm:pb-2 text-body px-2;
     }
     &-right {
         @apply order-1;
