Optimise: Add settings to control colours for CTAs

--- a/src/styles/sections/_cart-drawer.scss
+++ b/src/styles/sections/_cart-drawer.scss
@@ -69,6 +69,14 @@
 			@apply text-primary-light;
 		}
 	}
+
+	.bfcm-dark-layout {
+		.checkout-url,
+		.checkout-url:hover {
+			background-color: #151515 !important;
+			border-color: #151515;
+		}
+	}
 }
 
 // .cart-drawer {
