--- a/src/styles/sections/_reels-carousel.scss
+++ b/src/styles/sections/_reels-carousel.scss
@@ -2,4 +2,8 @@
     .nav--active {
         @apply bg-primary text-white font-normal focus:text-white visited:text-white hover:text-white;
     }
+
+    .nav--dark {
+        @apply bg-dark text-white font-normal focus:text-white visited:text-white hover:text-white;
+    }
 }
