--- a/src/styles/sections/_cart-drawer.scss
+++ b/src/styles/sections/_cart-drawer.scss
@@ -81,6 +81,10 @@
 				@apply text-dark border-dark hover:bg-dark hover:text-white;
 			}
 		}
+
+		.bfcm-btn {
+			@apply border-dark text-dark hover:bg-dark hover:text-white;
+		}
 	}
 }
 
