fixed the underline issue in blogs articles popup

--- a/src/styles/templates/_article.scss
+++ b/src/styles/templates/_article.scss
@@ -84,6 +84,10 @@
 			@apply no-underline;
 		}
 
+		a.ingredients--list {
+			@apply underline !important;
+		}
+
 		a:not(.bg-primary-light):hover {
 			@apply underline;
 		}
