new product popup

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,6 +46,7 @@
 // @import 'compounds/exit-intent';
 @import 'compounds/newsletter-popup';
 @import 'compounds/sales-popup';
+@import 'compounds/new-product-popup';
 // @import 'compounds/sweepstakes-popup';
 // @import 'compounds/cookies-popup';
 // @import 'compounds/pdp-upsell';
