--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -232,8 +232,8 @@
 		}
 
 		a {
-			@apply bg-gray-400;
-			border-radius: calc-em(20);
+			// @apply bg-gray-400;
+			// border-radius: calc-em(20);
 			white-space: nowrap;
 			cursor: pointer;
 			@apply text-gray-600;
