--- a/src/styles/sections/_product-carousel.scss
+++ b/src/styles/sections/_product-carousel.scss
@@ -1,15 +1,27 @@
 .product__carousel {
 
     &-nav li button {
-        @apply lg:!leading-[40px] hover:text-body focus:text-body visited:text-body font-normal bg-gray-400 rounded-full mr-1 w-auto text-base min-h-3 lg:min-h-4 max-h-3 lg:max-h-[45px] items-center px-2 text-gray-600;
-    }
-
-    &-nav li:last-child button {
-        @apply mr-0;
+        @apply font-normal w-auto text-base items-center px-2 text-gray-600 py-25 lg:py-1 lg:leading-[25px];
     }
 
     &-nav li .nav--active {
-        @apply bg-primary text-white font-normal focus:text-white visited:text-white hover:text-white;
+        
+        @apply text-body lg:bg-body lg:text-white lg:focus:text-white lg:visited:text-white lg:hover:text-white relative;        
+        
+        &:after {
+            height: 2px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: #151515;
+            content: '';
+
+            @screen lg {
+                content: none;
+            }
+        }
     }
 
     &-nav li .nav--dark {
